k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quantumfpo
  labels:
    app: quantumfpo
    version: v0.0.1-alpha
